--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,10 @@ authors = [
 ]
 requires-python = ">=3.12"
 dependencies = [
+    "joblib>=1.5.3",
     "matplotlib>=3.10.8",
     "requests>=2.32.5",
+    "tqdm>=4.67.1",
 ]
 
 [project.scripts]
