--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,3 +27,11 @@ color-perception-bench = "color_perception_bench.cli:main"
 [build-system]
 requires = ["uv_build>=0.9.5,<0.10.0"]
 build-backend = "uv_build"
+
+[dependency-groups]
+bge = [
+    "fastapi>=0.128.0",
+    "pydantic>=2.12.5",
+    "torch>=2.9.1",
+    "transformers>=4.57.6",
+]
